Crisis Response App/objects/Employee_Request__c.object
<CustomObject>
    <description>Requests that are made by an employee for business continuity, comfortability, and ongoing assistance.</description>
    <fields>
        <fullName>Able_to_Work_Normal_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the employee able to work during standard company hours?</inlineHelpText>
        <label>Able to Work Normal Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Airfare_Amount__c</fullName>
        <inlineHelpText>Please include only airfare costs</inlineHelpText>
        <label>Airfare Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the request has been approved</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Defines who the approver is for this request.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Request_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is responsible for completing this request?</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_for_Employee_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the employee able to purchase the items on their own to be reimbursed by the company?</inlineHelpText>
        <label>Available for Employee Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the fulfillment of this request affect the continuity and/or functionality of the organization?</inlineHelpText>
        <label>Business Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_of_Service__c</fullName>
        <label>Class of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Premium Economy</fullName>
                </value>
                <value>
                    <fullName>Business Class</fullName>
                </value>
                <value>
                    <fullName>First Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <inlineHelpText>Date that the request has been approved</inlineHelpText>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <inlineHelpText>How will the peripherals be delivered?</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver to Office</fullName>
                </value>
                <value>
                    <fullName>Deliver to Home</fullName>
                </value>
                <value>
                    <fullName>Downloaded to Computer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_Request__c</fullName>
        <inlineHelpText>Please provide further details of the request</inlineHelpText>
        <label>Description of Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_or_International__c</fullName>
        <label>Domestic or International</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic Travel</fullName>
                </value>
                <value>
                    <fullName>International Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Spend_Amount__c</fullName>
        <inlineHelpText>Total amount to be reimbursed to the employee</inlineHelpText>
        <label>Employee Spend Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Date that the request will expire</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has there been company communication that Executive-Level Approval will be needed for this type of travel?</inlineHelpText>
        <label>Executive Approval Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Risk_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the city traveling to in an area of marked high risk?</inlineHelpText>
        <label>High Risk Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Amount__c</fullName>
        <inlineHelpText>Please include all costs associated with hotel/lodging for the entire trip.</inlineHelpText>
        <label>Hotel Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Items_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are any peripherals or materials needed for the employee to be functional while working remote?</inlineHelpText>
        <label>Job-Related Items Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_EMail_Address_Email__c</fullName>
        <inlineHelpText>Manager&apos;s email address on the person record when this request was created.</inlineHelpText>
        <label>Manager E-Mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Amount__c</fullName>
        <inlineHelpText>Please include all other costs including train, car rental, meal costs, etc</inlineHelpText>
        <label>Other Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Person_E_Mail_Address_Email__c</fullName>
        <inlineHelpText>E-mail address of the associated person record when they created this employee request.</inlineHelpText>
        <label>Person E-Mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <inlineHelpText>Person that the request is related to</inlineHelpText>
        <label>Person</label>
        <referenceTo>Impacted_Person__c</referenceTo>
        <relationshipLabel>Employee Requests</relationshipLabel>
        <relationshipName>Employee_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>What is the priority level of the request?</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Travel__c</fullName>
        <label>Reason for Travel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer-Facing</fullName>
                </value>
                <value>
                    <fullName>Internal Business Travel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Trip__c</fullName>
        <inlineHelpText>Provide a brief trip summary which includes length of trip, what cities, and the business justification for travel.</inlineHelpText>
        <label>Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Travel Request</fullName>
                </value>
                <value>
                    <fullName>Remote Working Request</fullName>
                </value>
                <value>
                    <fullName>General Request</fullName>
                </value>
                <value>
                    <fullName>Job-Related Items Request</fullName>
                </value>
                <value>
                    <fullName>Technology Peripherals Request</fullName>
                    <isActive>false</isActive>
                    <label>Technology Peripherals Request</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date that the request will become effective</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                    <isActive>false</isActive>
                    <label>Opened</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Peripherals_Needed__c</fullName>
        <inlineHelpText>What technology peripherals does the employee need?</inlineHelpText>
        <label>Technology Peripherals Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To_From_Cities__c</fullName>
        <inlineHelpText>i.e. MSP-ORD-MSP, Minneapolis to Chicago, etc</inlineHelpText>
        <label>To/From Cities</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPN_Access_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the employee need access to a VPN?</inlineHelpText>
        <label>VPN Access Needed</label>
        <type>Checkbox</type>
    </fields>
    <label>Employee Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approved__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>General_Requests</fullName>
        <columns>NAME</columns>
        <columns>Person__c</columns>
        <columns>Status__c</columns>
        <columns>Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Employee_Request__c.General_Request</value>
        </filters>
        <label>General Requests</label>
    </listViews>
    <listViews>
        <fullName>Job_Related_Items_Requests</fullName>
        <columns>NAME</columns>
        <columns>Person__c</columns>
        <columns>Status__c</columns>
        <columns>Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Employee_Request__c.Technology_Request</value>
        </filters>
        <label>Job-Related Items Requests</label>
    </listViews>
    <listViews>
        <fullName>Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Person__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Under Review</value>
        </filters>
        <label>Open Requests</label>
    </listViews>
    <listViews>
        <fullName>Remote_Working_Requests</fullName>
        <columns>NAME</columns>
        <columns>Person__c</columns>
        <columns>Status__c</columns>
        <columns>Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Employee_Request__c.Remote_Working_Request</value>
        </filters>
        <label>Remote Working Requests</label>
    </listViews>
    <listViews>
        <fullName>Travel_Approvals</fullName>
        <columns>NAME</columns>
        <columns>To_From_Cities__c</columns>
        <columns>Person__c</columns>
        <columns>Reason_for_Travel__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Employee_Request__c.Travel_Approval</value>
        </filters>
        <label>Travel Approvals</label>
    </listViews>
    <nameField>
        <label>Employee Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Requests</pluralLabel>
    <recordTypes>
        <fullName>General_Request</fullName>
        <active>true</active>
        <label>General Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remote_Working_Request</fullName>
        <active>true</active>
        <description>Request type used for Remote Working</description>
        <label>Remote Working Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technology_Request</fullName>
        <active>true</active>
        <description>Request for items needed to preform an employee&apos;s job.</description>
        <label>Job-Related Items Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Travel_Approval</fullName>
        <active>true</active>
        <label>Travel Approval</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>